# pacman-repo-builder

./: .editorconfig  .gitattributes  .gitignore  COPYING  Cargo.toml  GPLv3.md  README.md  fmt.sh  generate-completions.sh
.github/workflows/: deploy.yaml  test.yaml
ci/github-actions/: expose-release-artifacts.sh  release-type.py3
ci/github-actions/arch-run/: Dockerfile  action.yml  init.bash  pacman.conf  run.bash
ci/github-actions/arch-run/patches/: makepkg
exports/: completion.bash  completion.elv  completion.fish  completion.ps1  completion.zsh
patches/: makepkg6
src/: app.rs  args.rs  cmd.rs  lib.rs  main.rs  manifest.rs  srcinfo.rs  utils.rs
src/app/: from_env.rs  mod.rs  run.rs
src/args/: build.rs  copyright.rs  deref_db.rs  init_aur_builder.rs  list.rs  manifest.rs  manifest_loader.rs  mod.rs  outdated.rs  patch_makepkg.rs  print_config.rs  sort.rs  srcinfo.rs  sync_srcinfo.rs
src/cmd/: build.rs  copyright.rs  deref_db.rs  init_aur_builder.rs  mod.rs  outdated.rs  patch_makepkg.rs  print_config.rs  sort.rs  sync_srcinfo.rs
src/makepkg/: mod.rs
src/manifest/: arch_filter.rs  build_metadata.rs  build_pacman_repo.rs  global_settings.rs  init_aur_builder.rs  member.rs  mod.rs  origin.rs  repository.rs  tristate.rs  wrapper.rs
src/srcinfo/: dependency.rs  mod.rs  optional_dependency.rs  reasoned_dependency.rs  unreasoned_dependency.rs  version.rs
src/srcinfo/database/: build_order.rs  insert_srcinfo.rs  mod.rs  package_build_order.rs  package_file_base_names.rs  package_list.rs  text_wrapper.rs
src/srcinfo/dependency/: mod.rs  reasoned.rs  unreasoned.rs
src/srcinfo/list/: mod.rs  package_order.rs
src/srcinfo/utils/: mod.rs  tests.rs
src/srcinfo/version/: mod.rs  tests.rs
src/status/: code.rs  failure.rs  mod.rs
src/sub/: mod.rs
src/sub/completions/: main.rs  mod.rs
src/utils/: alpm_wrapper.rs  clone_aur.rs  command_extra.rs  command_utils.rs  copyright_terms.rs  create_makepkg_command.rs  custom_makepkg.rs  db_init.rs  dereference_database_symlinks.rs  deserialize_multi_docs_yaml.rs  external_package_list.rs  extract_pkgname_prefix.rs  extract_value_from_line.rs  failed_build_record.rs  list_all_native_packages.rs  list_all_native_targets.rs  list_provides_from_info.rs  list_provides_multiple_targets.rs  list_provides_single_target.rs  load_failed_build_record.rs  may_env.rs  mod.rs  orphan_packages.rs  outdated_packages.rs  package_file_name.rs  pair.rs  read_srcinfo_file.rs  read_srcinfo_from_directory.rs  read_srcinfo_from_pkgbuild.rs  read_srcinfo_texts.rs  run_deref_db.rs  serialize_iter_yaml.rs  split_str_once.rs  tests.rs
tests/: completion_sync.rs  manifest.rs  outdated.rs  patch_makepkg.rs  print_config.rs  sort.rs  sync_srcinfo.rs
tests/assets/: init-aur-builder.yaml  manifest-list.yaml  resolved-members.yaml
tests/expected-output/outdated/: details-lossy-yaml.stdout.yaml  details-pkg-file-path.stdout.txt  details-strict-yaml.stdout.yaml
tests/expected-output/outdated/simple/: details-lossy-yaml.stdout.yaml  (+1 more)
tests/expected-output/print-config/: require-nothing.stdout.yaml  require-pkgbuild-and-srcinfo.stdout.yaml  require-pkgbuild.stdout.yaml  require-srcinfo.stdout.yaml  with-arch-filter-any.stdout.yaml  with-arch-filter-x86-i686.stdout.yaml  with-arch-filter-x86_64-i686.stdout.yaml  with-check-disabled.stdout.yaml  with-check-enabled.stdout.yaml  with-check-inherit.stdout.yaml  with-flags.stdout.yaml  with-multiple-repositories.stdout.yaml  with-one-repository.stdout.yaml
tests/fake-bin/: pacman  yay
tests/fake-bin/lib/: __init__.py
tests/fixtures/outdated/: build-pacman-repo.yaml
tests/fixtures/sort/: build-pacman-repo.yaml
(+58 files in other folders)
