[package]
name = "pacman-repo-builder"
description = "Build a custom pacman repository from a collection of PKGBUILD directories"
version = "0.0.0"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/pacman-repo-builder"
repository = "https://github.com/KSXGitHub/pacman-repo-builder.git"
keywords = [
  "pacman",
  "arch",
  "archlinux",
  "pkgbuild",
]
categories = ["command-line-utilities"]
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "pacman_repo_builder"
path = "src/lib.rs"

[[bin]]
name = "build-pacman-repo"
path = "src/main.rs"

[dependencies]
argh = "^0.1.3"
pipe-trait = "^0.2.0"
smart-default = "^0.6.0"
serde_yaml = "^0.8.13"
num-bigint = "^0.3.0"
num-traits = "^0.2.12"
alpm = "^0.10.1"
petgraph = "^0.5.1"
indexmap = "^1.6.0"
itertools = "^0.9.0"
rayon = "^1.4.1"
sha-1 = "^0.9.1"
hex-literal = "^0.3.1"
hex_fmt = "^0.3.0"
command-extra = "1.0.0"

[dependencies.serde]
version = "^1.0.116"
features = ["derive"]

[dev-dependencies]
tempfile = "^3.1.0"
fs_extra = "^1.2.0"
