[package]
name = "pacman-repo-builder"
description = "Build a custom pacman repository from a collection of PKGBUILD directories"
version = "0.0.0-rc.62"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"
documentation = "https://docs.rs/pacman-repo-builder"
repository = "https://github.com/KSXGitHub/pacman-repo-builder.git"
keywords = [
  "pacman",
  "arch",
  "archlinux",
  "pkgbuild",
]
categories = ["command-line-utilities"]
include = [
  "/src",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "pacman_repo_builder"
path = "src/lib.rs"

[[bin]]
name = "build-pacman-repo"
path = "src/main.rs"

[dependencies]
argh = "^0.1.4"
pipe-trait = "^0.4.0"
smart-default = "^0.6.0"
serde_yaml = "^0.8.17"
num-bigint = "^0.4.0"
num-traits = "^0.2.15"
alpm = "^2.0.5"
git2 = "^0.14.3"
petgraph = "^0.6.0"
indexmap = "^1.6.2"
itertools = "^0.10.0"
rayon = "^1.5.1"
sha-1 = "^0.10.0"
hex-literal = "^0.3.1"
hex_fmt = "^0.3.0"
command-extra = "^1.0.0"
pacmanconf = "^2.0.0"

[dependencies.serde]
version = "^1.0.126"
features = ["derive"]

[dev-dependencies]
tempfile = "^3.2.0"
fs_extra = "^1.2.0"

[profile.release]
opt-level = "s"
